tests/compile_fail/invalid_counter_change_list_empty_literal.rs
use surgeist_style::CounterChangeList;

fn main() {
    let _changes = CounterChangeList {
        changes: Vec::new(),
    };
}
