tests/compile_fail/invalid_counter_change_list_empty_literal.stderr
error[E0451]: field `changes` of struct `CounterChangeList` is private
 --> tests/compile_fail/invalid_counter_change_list_empty_literal.rs:5:9
  |
4 |     let _changes = CounterChangeList {
  |                    ----------------- in this type
5 |         changes: Vec::new(),
  |         ^^^^^^^ private field
